# ap-copy-master-to-blink

./: .gitignore  MANIFEST.in  Makefile  README.md  TEST_PLAN.md  pyproject.toml
.github/workflows/: coverage.yml  format.yml  lint.yml  test.yml  typecheck.yml
ap_copy_master_to_blink/: __init__.py  __main__.py  config.py  copy_masters.py  flat_batch_selection.py  flat_state.py  matching.py  picker.py
docs/: flat-matching-design.md
tests/: __init__.py  test_config.py  test_copy_masters.py  test_flat_batch_selection.py  test_flat_state.py  test_main.py  test_matching.py  test_picker.py
